; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/clk_mgr/dce110/extr_dce110_clk_mgr.c_dce110_get_min_vblank_time_us.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/display/dc/clk_mgr/dce110/extr_dce110_clk_mgr.c_dce110_get_min_vblank_time_us.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.dc_state = type { i64, %struct.dc_stream_state** }
%struct.dc_stream_state = type { %struct.TYPE_2__, %struct.dc_crtc_timing_adjust }
%struct.TYPE_2__ = type { i32, i32, i32, i32 }
%struct.dc_crtc_timing_adjust = type { i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dce110_get_min_vblank_time_us(%struct.dc_state* %0) #0 {
  %2 = alloca %struct.dc_state*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.dc_stream_state*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.dc_crtc_timing_adjust, align 8
  store %struct.dc_state* %0, %struct.dc_state** %2, align 8
  store i32 -1, i32* %4, align 4
  store i64 0, i64* %3, align 8
  br label %10

10:                                               ; preds = %65, %1
  %11 = load i64, i64* %3, align 8
  %12 = load %struct.dc_state*, %struct.dc_state** %2, align 8
  %13 = getelementptr inbounds %struct.dc_state, %struct.dc_state* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ult i64 %11, %14
  br i1 %15, label %16, label %68

16:                                               ; preds = %10
  %17 = load %struct.dc_state*, %struct.dc_state** %2, align 8
  %18 = getelementptr inbounds %struct.dc_state, %struct.dc_state* %17, i32 0, i32 1
  %19 = load %struct.dc_stream_state**, %struct.dc_stream_state*** %18, align 8
  %20 = load i64, i64* %3, align 8
  %21 = getelementptr inbounds %struct.dc_stream_state*, %struct.dc_stream_state** %19, i64 %20
  %22 = load %struct.dc_stream_state*, %struct.dc_stream_state** %21, align 8
  store %struct.dc_stream_state* %22, %struct.dc_stream_state** %5, align 8
  store i32 0, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %23 = load %struct.dc_stream_state*, %struct.dc_stream_state** %5, align 8
  %24 = getelementptr inbounds %struct.dc_stream_state, %struct.dc_stream_state* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  store i32 %26, i32* %8, align 4
  %27 = load %struct.dc_stream_state*, %struct.dc_stream_state** %5, align 8
  %28 = getelementptr inbounds %struct.dc_stream_state, %struct.dc_stream_state* %27, i32 0, i32 1
  %29 = bitcast %struct.dc_crtc_timing_adjust* %9 to i8*
  %30 = bitcast %struct.dc_crtc_timing_adjust* %28 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 8 %29, i8* align 8 %30, i64 16, i1 false)
  %31 = getelementptr inbounds %struct.dc_crtc_timing_adjust, %struct.dc_crtc_timing_adjust* %9, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = getelementptr inbounds %struct.dc_crtc_timing_adjust, %struct.dc_crtc_timing_adjust* %9, i32 0, i32 1
  %34 = load i64, i64* %33, align 8
  %35 = icmp ne i64 %32, %34
  br i1 %35, label %36, label %40

36:                                               ; preds = %16
  %37 = getelementptr inbounds %struct.dc_crtc_timing_adjust, %struct.dc_crtc_timing_adjust* %9, i32 0, i32 1
  %38 = load i64, i64* %37, align 8
  %39 = trunc i64 %38 to i32
  store i32 %39, i32* %8, align 4
  br label %40

40:                                               ; preds = %36, %16
  %41 = load %struct.dc_stream_state*, %struct.dc_stream_state** %5, align 8
  %42 = getelementptr inbounds %struct.dc_stream_state, %struct.dc_stream_state* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 1
  %44 = load i32, i32* %43, align 4
  %45 = load i32, i32* %8, align 4
  %46 = load %struct.dc_stream_state*, %struct.dc_stream_state** %5, align 8
  %47 = getelementptr inbounds %struct.dc_stream_state, %struct.dc_stream_state* %46, i32 0, i32 0
  %48 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %47, i32 0, i32 2
  %49 = load i32, i32* %48, align 8
  %50 = sub nsw i32 %45, %49
  %51 = mul nsw i32 %44, %50
  store i32 %51, i32* %6, align 4
  %52 = load i32, i32* %6, align 4
  %53 = mul nsw i32 %52, 10000
  %54 = load %struct.dc_stream_state*, %struct.dc_stream_state** %5, align 8
  %55 = getelementptr inbounds %struct.dc_stream_state, %struct.dc_stream_state* %54, i32 0, i32 0
  %56 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %55, i32 0, i32 3
  %57 = load i32, i32* %56, align 4
  %58 = sdiv i32 %53, %57
  store i32 %58, i32* %7, align 4
  %59 = load i32, i32* %4, align 4
  %60 = load i32, i32* %7, align 4
  %61 = icmp sgt i32 %59, %60
  br i1 %61, label %62, label %64

62:                                               ; preds = %40
  %63 = load i32, i32* %7, align 4
  store i32 %63, i32* %4, align 4
  br label %64

64:                                               ; preds = %62, %40
  br label %65

65:                                               ; preds = %64
  %66 = load i64, i64* %3, align 8
  %67 = add i64 %66, 1
  store i64 %67, i64* %3, align 8
  br label %10

68:                                               ; preds = %10
  %69 = load i32, i32* %4, align 4
  ret i32 %69
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
